--- a/UIs/nObject.ui
+++ b/UIs/nObject.ui
@@ -353,7 +353,6 @@
     <bool>false</bool>
    </attribute>
    <addaction name="actionRemove"/>
-   <addaction name="separator"/>
    <addaction name="actionFillH"/>
    <addaction name="actionFillV"/>
    <addaction name="actionFillBoth"/>
@@ -364,7 +363,7 @@
   </widget>
   <action name="actionRemove">
    <property name="icon">
-    <iconset resource="../../../../../../private/var/folders/0v/r34b88ss03z9spv7tk_cs0nr0000gp/T/qtc-cmake-lG16jK/src/qrc/icons.qrc">
+    <iconset resource="../../build-neutrinoMaster-Brew-Debug/src/qrc/icons.qrc">
      <normaloff>:/icons/remove.png</normaloff>:/icons/remove.png</iconset>
    </property>
    <property name="text">
@@ -376,7 +375,7 @@
   </action>
   <action name="actionFillH">
    <property name="icon">
-    <iconset resource="../../../../../../private/var/folders/0v/r34b88ss03z9spv7tk_cs0nr0000gp/T/qtc-cmake-lG16jK/src/qrc/icons.qrc">
+    <iconset resource="../../build-neutrinoMaster-Brew-Debug/src/qrc/icons.qrc">
      <normaloff>:/icons/fillH.png</normaloff>:/icons/fillH.png</iconset>
    </property>
    <property name="text">
@@ -388,7 +387,7 @@
   </action>
   <action name="actionFillV">
    <property name="icon">
-    <iconset resource="../../../../../../private/var/folders/0v/r34b88ss03z9spv7tk_cs0nr0000gp/T/qtc-cmake-lG16jK/src/qrc/icons.qrc">
+    <iconset resource="../../build-neutrinoMaster-Brew-Debug/src/qrc/icons.qrc">
      <normaloff>:/icons/fillV.png</normaloff>:/icons/fillV.png</iconset>
    </property>
    <property name="text">
@@ -400,7 +399,7 @@
   </action>
   <action name="actionIntersect">
    <property name="icon">
-    <iconset resource="../../../../../../private/var/folders/0v/r34b88ss03z9spv7tk_cs0nr0000gp/T/qtc-cmake-lG16jK/src/qrc/icons.qrc">
+    <iconset resource="../../build-neutrinoMaster-Brew-Debug/src/qrc/icons.qrc">
      <normaloff>:/icons/intersect.png</normaloff>:/icons/intersect.png</iconset>
    </property>
    <property name="text">
@@ -412,7 +411,7 @@
   </action>
   <action name="actionSubmatrix">
    <property name="icon">
-    <iconset resource="../../../../../../private/var/folders/0v/r34b88ss03z9spv7tk_cs0nr0000gp/T/qtc-cmake-lG16jK/src/qrc/icons.qrc">
+    <iconset resource="../../build-neutrinoMaster-Brew-Debug/src/qrc/icons.qrc">
      <normaloff>:/icons/submatrix.png</normaloff>:/icons/submatrix.png</iconset>
    </property>
    <property name="text">
@@ -424,7 +423,7 @@
   </action>
   <action name="actionFillBoth">
    <property name="icon">
-    <iconset resource="../../../../../../private/var/folders/0v/r34b88ss03z9spv7tk_cs0nr0000gp/T/qtc-cmake-lG16jK/src/qrc/icons.qrc">
+    <iconset resource="../../build-neutrinoMaster-Brew-Debug/src/qrc/icons.qrc">
      <normaloff>:/icons/fillBoth.png</normaloff>:/icons/fillBoth.png</iconset>
    </property>
    <property name="text">
@@ -436,7 +435,7 @@
   </action>
   <action name="actionCenter">
    <property name="icon">
-    <iconset resource="../../../../../../private/var/folders/0v/r34b88ss03z9spv7tk_cs0nr0000gp/T/qtc-cmake-lG16jK/src/qrc/icons.qrc">
+    <iconset resource="../../build-neutrinoMaster-Brew-Debug/src/qrc/icons.qrc">
      <normaloff>:/icons/center.png</normaloff>:/icons/center.png</iconset>
    </property>
    <property name="text">
@@ -448,7 +447,7 @@
   </action>
  </widget>
  <resources>
-  <include location="../../../../../../private/var/folders/0v/r34b88ss03z9spv7tk_cs0nr0000gp/T/qtc-cmake-lG16jK/src/qrc/icons.qrc"/>
+  <include location="../../build-neutrinoMaster-Brew-Debug/src/qrc/icons.qrc"/>
  </resources>
  <connections/>
 </ui>
