--- a/plugins/Interferometry/Interferometry.ui
+++ b/plugins/Interferometry/Interferometry.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>nInterferometry</class>
- <widget class="QMainWindow" name="nInterferometry">
+ <class>Interferometry</class>
+ <widget class="QMainWindow" name="Interferometry">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -259,7 +259,7 @@
           <string>...</string>
          </property>
          <property name="icon">
-          <iconset resource="../../../../../../private/var/folders/0v/r34b88ss03z9spv7tk_cs0nr0000gp/T/qtc-cmake-Lvo0i4/src/qrc/icons.qrc">
+          <iconset resource="../../../build-neutrinoMaster-Brew-Debug/src/qrc/icons.qrc">
            <normaloff>:/icons/refresh2.png</normaloff>:/icons/refresh2.png</iconset>
          </property>
         </widget>
@@ -367,7 +367,7 @@
           <string>...</string>
          </property>
          <property name="icon">
-          <iconset resource="../../../../../../private/var/folders/0v/r34b88ss03z9spv7tk_cs0nr0000gp/T/qtc-cmake-Lvo0i4/src/qrc/icons.qrc">
+          <iconset resource="../../../build-neutrinoMaster-Brew-Debug/src/qrc/icons.qrc">
            <normaloff>:/icons/line.png</normaloff>:/icons/line.png</iconset>
          </property>
         </widget>
@@ -383,7 +383,7 @@
           <string>...</string>
          </property>
          <property name="icon">
-          <iconset resource="../../../../../../private/var/folders/0v/r34b88ss03z9spv7tk_cs0nr0000gp/T/qtc-cmake-Lvo0i4/src/qrc/icons.qrc">
+          <iconset resource="../../../build-neutrinoMaster-Brew-Debug/src/qrc/icons.qrc">
            <normaloff>:/icons/run.png</normaloff>:/icons/run.png</iconset>
          </property>
         </widget>
@@ -462,7 +462,7 @@
           <string>...</string>
          </property>
          <property name="icon">
-          <iconset resource="../../../../../../private/var/folders/0v/r34b88ss03z9spv7tk_cs0nr0000gp/T/qtc-cmake-Lvo0i4/src/qrc/icons.qrc">
+          <iconset resource="../../../build-neutrinoMaster-Brew-Debug/src/qrc/icons.qrc">
            <normaloff>:/icons/center.png</normaloff>:/icons/center.png</iconset>
          </property>
          <property name="checkable">
@@ -530,7 +530,7 @@
           <string>...</string>
          </property>
          <property name="icon">
-          <iconset resource="../../../../../../private/var/folders/0v/r34b88ss03z9spv7tk_cs0nr0000gp/T/qtc-cmake-Lvo0i4/src/qrc/icons.qrc">
+          <iconset resource="../../../build-neutrinoMaster-Brew-Debug/src/qrc/icons.qrc">
            <normaloff>:/icons/run.png</normaloff>:/icons/run.png</iconset>
          </property>
         </widget>
@@ -578,7 +578,7 @@
           <string>...</string>
          </property>
          <property name="icon">
-          <iconset resource="../../../../../../private/var/folders/0v/r34b88ss03z9spv7tk_cs0nr0000gp/T/qtc-cmake-Lvo0i4/src/qrc/icons.qrc">
+          <iconset resource="../../../build-neutrinoMaster-Brew-Debug/src/qrc/icons.qrc">
            <normaloff>:/icons/line.png</normaloff>:/icons/line.png</iconset>
          </property>
          <property name="checkable">
@@ -644,7 +644,7 @@
           <string>...</string>
          </property>
          <property name="icon">
-          <iconset resource="../../../../../../private/var/folders/0v/r34b88ss03z9spv7tk_cs0nr0000gp/T/qtc-cmake-Lvo0i4/src/qrc/icons.qrc">
+          <iconset resource="../../../build-neutrinoMaster-Brew-Debug/src/qrc/icons.qrc">
            <normaloff>:/icons/run.png</normaloff>:/icons/run.png</iconset>
          </property>
         </widget>
@@ -713,7 +713,7 @@
           <string>+</string>
          </property>
          <property name="icon">
-          <iconset resource="../../../../../../private/var/folders/0v/r34b88ss03z9spv7tk_cs0nr0000gp/T/qtc-cmake-Lvo0i4/src/qrc/icons.qrc">
+          <iconset resource="../../../build-neutrinoMaster-Brew-Debug/src/qrc/icons.qrc">
            <normaloff>:/icons/plus.png</normaloff>:/icons/plus.png</iconset>
          </property>
         </widget>
@@ -732,7 +732,7 @@
           <string>...</string>
          </property>
          <property name="icon">
-          <iconset resource="../../../../../../private/var/folders/0v/r34b88ss03z9spv7tk_cs0nr0000gp/T/qtc-cmake-Lvo0i4/src/qrc/icons.qrc">
+          <iconset resource="../../../build-neutrinoMaster-Brew-Debug/src/qrc/icons.qrc">
            <normaloff>:/icons/run.png</normaloff>:/icons/run.png</iconset>
          </property>
         </widget>
@@ -836,7 +836,7 @@
           <string>...</string>
          </property>
          <property name="icon">
-          <iconset resource="../../../../../../private/var/folders/0v/r34b88ss03z9spv7tk_cs0nr0000gp/T/qtc-cmake-Lvo0i4/src/qrc/icons.qrc">
+          <iconset resource="../../../build-neutrinoMaster-Brew-Debug/src/qrc/icons.qrc">
            <normaloff>:/icons/run.png</normaloff>:/icons/run.png</iconset>
          </property>
         </widget>
@@ -999,7 +999,7 @@
     <bool>true</bool>
    </property>
    <property name="icon">
-    <iconset resource="../../../../../../private/var/folders/0v/r34b88ss03z9spv7tk_cs0nr0000gp/T/qtc-cmake-Lvo0i4/src/qrc/icons.qrc">
+    <iconset resource="../../../build-neutrinoMaster-Brew-Debug/src/qrc/icons.qrc">
      <normaloff>:/icons/autoRefresh.png</normaloff>
      <normalon>:/icons/noAutoRefresh.png</normalon>:/icons/autoRefresh.png</iconset>
    </property>
@@ -1012,7 +1012,7 @@
   </action>
   <action name="actionDoWavelet">
    <property name="icon">
-    <iconset resource="../../../../../../private/var/folders/0v/r34b88ss03z9spv7tk_cs0nr0000gp/T/qtc-cmake-Lvo0i4/src/qrc/icons.qrc">
+    <iconset resource="../../../build-neutrinoMaster-Brew-Debug/src/qrc/icons.qrc">
      <normaloff>:/icons/run.png</normaloff>:/icons/run.png</iconset>
    </property>
    <property name="text">
@@ -1024,7 +1024,7 @@
   </action>
   <action name="actionDuplicate">
    <property name="icon">
-    <iconset resource="../../../../../../private/var/folders/0v/r34b88ss03z9spv7tk_cs0nr0000gp/T/qtc-cmake-Lvo0i4/src/qrc/icons.qrc">
+    <iconset resource="../../../build-neutrinoMaster-Brew-Debug/src/qrc/icons.qrc">
      <normaloff>:/icons/plus.png</normaloff>:/icons/plus.png</iconset>
    </property>
    <property name="text">
@@ -1036,7 +1036,7 @@
   </action>
   <action name="actionDelete">
    <property name="icon">
-    <iconset resource="../../../../../../private/var/folders/0v/r34b88ss03z9spv7tk_cs0nr0000gp/T/qtc-cmake-Lvo0i4/src/qrc/icons.qrc">
+    <iconset resource="../../../build-neutrinoMaster-Brew-Debug/src/qrc/icons.qrc">
      <normaloff>:/icons/trash.png</normaloff>:/icons/trash.png</iconset>
    </property>
    <property name="text">
@@ -1067,7 +1067,7 @@
   <tabstop>doMaskCutoff</tabstop>
  </tabstops>
  <resources>
-  <include location="../../../../../../private/var/folders/0v/r34b88ss03z9spv7tk_cs0nr0000gp/T/qtc-cmake-Lvo0i4/src/qrc/icons.qrc"/>
+  <include location="../../../build-neutrinoMaster-Brew-Debug/src/qrc/icons.qrc"/>
  </resources>
  <connections/>
 </ui>
