--- a/UIs/neutrino.ui
+++ b/UIs/neutrino.ui
@@ -707,7 +707,7 @@
   </action>
   <action name="actionPoint">
    <property name="icon">
-    <iconset resource="../resources/icons/icons.qrc">
+    <iconset resource="../../build-neutrinoMaster-Brew-Debug/src/qrc/icons.qrc">
      <normaloff>:/icons/center.png</normaloff>:/icons/center.png</iconset>
    </property>
    <property name="text">
@@ -742,7 +742,7 @@
     <bool>true</bool>
    </property>
    <property name="icon">
-    <iconset resource="../resources/icons/icons.qrc">
+    <iconset resource="../../build-neutrinoMaster-Brew-Debug/src/qrc/icons.qrc">
      <normaloff>:/icons/lockOpen.png</normaloff>
      <normalon>:/icons/lockClose.png</normalon>:/icons/lockOpen.png</iconset>
    </property>
@@ -753,18 +753,9 @@
     <string>Lock colorbar</string>
    </property>
   </action>
-  <action name="actionPython">
-   <property name="icon">
-    <iconset>
-     <normaloff>:/icons/python.png</normaloff>:/icons/python.png</iconset>
-   </property>
-   <property name="text">
-    <string>Shell</string>
-   </property>
-  </action>
   <action name="actionOperator">
    <property name="icon">
-    <iconset resource="../resources/icons/icons.qrc">
+    <iconset resource="../../build-neutrinoMaster-Brew-Debug/src/qrc/icons.qrc">
      <normaloff>:/icons/math.png</normaloff>:/icons/math.png</iconset>
    </property>
    <property name="text">
@@ -803,8 +794,7 @@
   </customwidget>
  </customwidgets>
  <resources>
-  <include location="../plugins/nPython/python.qrc"/>
-  <include location="../resources/icons/icons.qrc"/>
+  <include location="../../build-neutrinoMaster-Brew-Debug/src/qrc/icons.qrc"/>
  </resources>
  <connections/>
 </ui>
