--- a/UIs/nOperator.ui
+++ b/UIs/nOperator.ui
@@ -219,6 +219,11 @@
          </item>
          <item>
           <property name="text">
+           <string>Transpose</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
            <string>Log 10</string>
           </property>
          </item>
