--- a/plugins/JavaScript/JavaScript.ui
+++ b/plugins/JavaScript/JavaScript.ui
@@ -23,41 +23,20 @@
    <bool>true</bool>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <layout class="QGridLayout" name="gridLayout">
-    <property name="leftMargin">
-     <number>4</number>
-    </property>
-    <property name="topMargin">
-     <number>4</number>
-    </property>
-    <property name="rightMargin">
-     <number>4</number>
-    </property>
-    <property name="bottomMargin">
-     <number>4</number>
-    </property>
-    <item row="0" column="0">
+   <layout class="QVBoxLayout" name="verticalLayout">
+    <item>
      <widget class="QLineEdit" name="command">
       <property name="font">
        <font>
         <pointsize>10</pointsize>
        </font>
       </property>
-     </widget>
-    </item>
-    <item row="0" column="1">
-     <widget class="QPushButton" name="execute">
-      <property name="font">
-       <font>
-        <pointsize>10</pointsize>
-       </font>
-      </property>
-      <property name="text">
-       <string>execute</string>
+      <property name="neutrinoSave" stdset="0">
+       <bool>true</bool>
       </property>
      </widget>
     </item>
-    <item row="1" column="0" colspan="2">
+    <item>
      <widget class="QPlainTextEdit" name="output">
       <property name="font">
        <font>
