--- a/plugins/Visar/Visar2.ui
+++ b/plugins/Visar/Visar2.ui
@@ -119,7 +119,7 @@
          <string/>
         </property>
         <property name="icon">
-         <iconset resource="../../resources/icons/icons.qrc">
+         <iconset resource="Visar.qrc">
           <normaloff>:/icons/refresh.png</normaloff>:/icons/refresh.png</iconset>
         </property>
         <property name="neutrinoSave" stdset="0">
@@ -202,7 +202,7 @@
             <string>...</string>
            </property>
            <property name="icon">
-            <iconset resource="../../resources/icons/icons.qrc">
+            <iconset resource="../GhostFringes/GhostFringes.qrc">
              <normaloff>:/icons/refresh2.png</normaloff>:/icons/refresh2.png</iconset>
            </property>
            <property name="neutrinoSave" stdset="0">
@@ -341,6 +341,9 @@
         <property name="toolTip">
          <string>offset reference (dark value)</string>
         </property>
+        <property name="prefix">
+         <string>ref: </string>
+        </property>
         <property name="suffix">
          <string> [counts]</string>
         </property>
@@ -356,6 +359,9 @@
        <widget class="QDoubleSpinBox" name="offShot">
         <property name="toolTip">
          <string>offset shot (dark value)</string>
+        </property>
+        <property name="prefix">
+         <string>shot: </string>
         </property>
         <property name="suffix">
          <string> [counts]</string>
@@ -392,8 +398,11 @@
         <property name="toolTip">
          <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Reference multiplication factor:&lt;/p&gt;&lt;p&gt;Fix jitter between ref. and shot&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
         </property>
+        <property name="prefix">
+         <string>ref * </string>
+        </property>
         <property name="suffix">
-         <string> X</string>
+         <string> </string>
         </property>
         <property name="decimals">
          <number>3</number>
@@ -449,7 +458,8 @@
   <tabstop>multRef</tabstop>
  </tabstops>
  <resources>
-  <include location="../../resources/icons/icons.qrc"/>
+  <include location="../GhostFringes/GhostFringes.qrc"/>
+  <include location="Visar.qrc"/>
  </resources>
  <connections/>
 </ui>
