--- a/plugins/Reflectivity/Reflectivity.ui
+++ b/plugins/Reflectivity/Reflectivity.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>262</width>
-    <height>312</height>
+    <width>279</width>
+    <height>267</height>
    </rect>
   </property>
   <property name="font">
@@ -29,9 +29,12 @@
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QGridLayout" name="gridLayout">
-    <item row="3" column="0">
-     <widget class="QWidget" name="widget_3" native="true">
-      <layout class="QGridLayout" name="gridLayout_2">
+    <item row="2" column="0">
+     <widget class="QGroupBox" name="groupBox">
+      <property name="title">
+       <string/>
+      </property>
+      <layout class="QHBoxLayout" name="horizontalLayout" stretch="1,0,1">
        <property name="leftMargin">
         <number>0</number>
        </property>
@@ -44,36 +47,74 @@
        <property name="bottomMargin">
         <number>0</number>
        </property>
-       <item row="2" column="1">
-        <widget class="QCheckBox" name="erasePrevious">
-         <property name="enabled">
-          <bool>false</bool>
+       <item>
+        <widget class="QDoubleSpinBox" name="min_val">
+         <property name="minimum">
+          <double>-99.000000000000000</double>
          </property>
-         <property name="font">
-          <font>
-           <pointsize>10</pointsize>
-          </font>
-         </property>
-         <property name="text">
-          <string>Erase previous</string>
-         </property>
-         <property name="checked">
-          <bool>true</bool>
+         <property name="singleStep">
+          <double>0.100000000000000</double>
          </property>
          <property name="neutrinoSave" stdset="0">
           <bool>true</bool>
          </property>
         </widget>
        </item>
-       <item row="2" column="0">
-        <widget class="QPushButton" name="doIt">
-         <property name="font">
-          <font>
-           <pointsize>10</pointsize>
-          </font>
-         </property>
+       <item>
+        <widget class="QLabel" name="label">
          <property name="text">
-          <string>Calculate</string>
+          <string>:</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QDoubleSpinBox" name="max_val">
+         <property name="singleStep">
+          <double>0.100000000000000</double>
+         </property>
+         <property name="value">
+          <double>1.000000000000000</double>
+         </property>
+         <property name="neutrinoSave" stdset="0">
+          <bool>true</bool>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </widget>
+    </item>
+    <item row="0" column="0">
+     <widget class="QGroupBox" name="groupBox_14">
+      <property name="title">
+       <string>Reference &amp; Shot</string>
+      </property>
+      <layout class="QVBoxLayout" name="verticalLayout">
+       <property name="leftMargin">
+        <number>4</number>
+       </property>
+       <property name="topMargin">
+        <number>4</number>
+       </property>
+       <property name="rightMargin">
+        <number>4</number>
+       </property>
+       <property name="bottomMargin">
+        <number>4</number>
+       </property>
+       <item>
+        <widget class="QComboBox" name="ref">
+         <property name="neutrinoImage" stdset="0">
+          <bool>true</bool>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QComboBox" name="shot">
+         <property name="toolTip">
+          <string>Shot</string>
+         </property>
+         <property name="neutrinoImage" stdset="0">
+          <bool>true</bool>
          </property>
         </widget>
        </item>
@@ -83,9 +124,9 @@
     <item row="1" column="0">
      <widget class="QGroupBox" name="carrierBox">
       <property name="title">
-       <string>Offset, ref multiplier</string>
+       <string>Offset, ref multiplier, blur</string>
       </property>
-      <layout class="QGridLayout" name="gridLayout_3" columnstretch="1,1">
+      <layout class="QGridLayout" name="gridLayout_3" columnstretch="1,1,0">
        <property name="leftMargin">
         <number>0</number>
        </property>
@@ -157,85 +198,13 @@
          </property>
         </widget>
        </item>
-      </layout>
-     </widget>
-    </item>
-    <item row="0" column="0">
-     <widget class="QGroupBox" name="groupBox_14">
-      <property name="title">
-       <string>Reference &amp; Shot</string>
-      </property>
-      <layout class="QVBoxLayout" name="verticalLayout">
-       <property name="leftMargin">
-        <number>4</number>
-       </property>
-       <property name="topMargin">
-        <number>4</number>
-       </property>
-       <property name="rightMargin">
-        <number>4</number>
-       </property>
-       <property name="bottomMargin">
-        <number>4</number>
-       </property>
-       <item>
-        <widget class="QComboBox" name="ref">
-         <property name="neutrinoImage" stdset="0">
-          <bool>true</bool>
+       <item row="0" column="2">
+        <widget class="QSpinBox" name="blur">
+         <property name="suffix">
+          <string>px</string>
          </property>
-        </widget>
-       </item>
-       <item>
-        <widget class="QComboBox" name="shot">
-         <property name="toolTip">
-          <string>Shot</string>
-         </property>
-         <property name="neutrinoImage" stdset="0">
-          <bool>true</bool>
-         </property>
-        </widget>
-       </item>
-      </layout>
-     </widget>
-    </item>
-    <item row="2" column="0">
-     <widget class="QGroupBox" name="groupBox">
-      <property name="title">
-       <string>min max</string>
-      </property>
-      <layout class="QHBoxLayout" name="horizontalLayout">
-       <property name="leftMargin">
-        <number>0</number>
-       </property>
-       <property name="topMargin">
-        <number>4</number>
-       </property>
-       <property name="rightMargin">
-        <number>0</number>
-       </property>
-       <property name="bottomMargin">
-        <number>0</number>
-       </property>
-       <item>
-        <widget class="QDoubleSpinBox" name="min_val">
-         <property name="minimum">
-          <double>-99.000000000000000</double>
-         </property>
-         <property name="singleStep">
-          <double>0.100000000000000</double>
-         </property>
-         <property name="neutrinoSave" stdset="0">
-          <bool>true</bool>
-         </property>
-        </widget>
-       </item>
-       <item>
-        <widget class="QDoubleSpinBox" name="max_val">
-         <property name="singleStep">
-          <double>0.100000000000000</double>
-         </property>
-         <property name="value">
-          <double>1.000000000000000</double>
+         <property name="prefix">
+          <string/>
          </property>
          <property name="neutrinoSave" stdset="0">
           <bool>true</bool>
@@ -244,6 +213,70 @@
        </item>
       </layout>
      </widget>
+    </item>
+    <item row="4" column="0">
+     <widget class="QWidget" name="widget_3" native="true">
+      <layout class="QGridLayout" name="gridLayout_2">
+       <property name="leftMargin">
+        <number>0</number>
+       </property>
+       <property name="topMargin">
+        <number>0</number>
+       </property>
+       <property name="rightMargin">
+        <number>0</number>
+       </property>
+       <property name="bottomMargin">
+        <number>0</number>
+       </property>
+       <item row="2" column="1">
+        <widget class="QCheckBox" name="erasePrevious">
+         <property name="enabled">
+          <bool>false</bool>
+         </property>
+         <property name="font">
+          <font>
+           <pointsize>10</pointsize>
+          </font>
+         </property>
+         <property name="text">
+          <string>Erase previous</string>
+         </property>
+         <property name="checked">
+          <bool>true</bool>
+         </property>
+         <property name="neutrinoSave" stdset="0">
+          <bool>true</bool>
+         </property>
+        </widget>
+       </item>
+       <item row="2" column="0">
+        <widget class="QPushButton" name="doIt">
+         <property name="font">
+          <font>
+           <pointsize>10</pointsize>
+          </font>
+         </property>
+         <property name="text">
+          <string>Calculate</string>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </widget>
+    </item>
+    <item row="3" column="0">
+     <spacer name="verticalSpacer">
+      <property name="orientation">
+       <enum>Qt::Vertical</enum>
+      </property>
+      <property name="sizeHint" stdset="0">
+       <size>
+        <width>20</width>
+        <height>40</height>
+       </size>
+      </property>
+     </spacer>
     </item>
    </layout>
   </widget>
