--- a/UIs/nMouseInfo.ui
+++ b/UIs/nMouseInfo.ui
@@ -38,7 +38,10 @@
        </font>
       </property>
       <property name="currentIndex">
-       <number>1</number>
+       <number>0</number>
+      </property>
+      <property name="neutrinoSave" stdset="0">
+       <bool>true</bool>
       </property>
       <widget class="QWidget" name="tab">
        <attribute name="title">
