--- a/UIs/nOperator.ui
+++ b/UIs/nOperator.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>232</width>
-    <height>282</height>
+    <width>235</width>
+    <height>296</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -82,7 +82,7 @@
           </font>
          </property>
          <property name="text">
-          <string>Number</string>
+          <string/>
          </property>
          <property name="neutrinoSave" stdset="0">
           <bool>true</bool>
@@ -104,7 +104,7 @@
           </font>
          </property>
          <property name="text">
-          <string>Image</string>
+          <string/>
          </property>
          <property name="neutrinoSave" stdset="0">
           <bool>true</bool>
@@ -219,7 +219,7 @@
          </item>
          <item>
           <property name="text">
-           <string>Plasma scale[um/px] lambda[nm]</string>
+           <string>Plasma lambda[nm]</string>
           </property>
          </item>
          <item>
@@ -313,7 +313,7 @@
           </font>
          </property>
          <property name="text">
-          <string>Image</string>
+          <string/>
          </property>
          <property name="neutrinoSave" stdset="0">
           <bool>true</bool>
@@ -340,7 +340,7 @@
           </font>
          </property>
          <property name="text">
-          <string>Number</string>
+          <string/>
          </property>
          <property name="neutrinoSave" stdset="0">
           <bool>true</bool>
