--- a/UIs/neutrino.ui
+++ b/UIs/neutrino.ui
@@ -104,6 +104,7 @@
     <addaction name="actionSave_Session"/>
     <addaction name="actionMonitor_Directory"/>
     <addaction name="separator"/>
+    <addaction name="actionExport_pixmap"/>
     <addaction name="actionExport"/>
     <addaction name="actionExport_all"/>
     <addaction name="actionPrint"/>
@@ -783,6 +784,11 @@
   <action name="actionOpen_Glob">
    <property name="text">
     <string>Open Glob</string>
+   </property>
+  </action>
+  <action name="actionExport_pixmap">
+   <property name="text">
+    <string>Export pixmap</string>
    </property>
   </action>
  </widget>
